# Languages

./: .gitignore  README.md  header.txt
Lab01/: .gitignore  output.txt
Lab01/src/: processor.h
Lab01_02/src/: processor.c  test_processor.c
Lab03/: CMakeLists.txt
Lab03/src/: list.h  person.h
Lab04/: output.txt
Lab04/src/: scanner.c  scanner.h  scanner_ad_hoc.c
Lab07/: CMakeLists.txt  output.txt
Lab07/src/: flex_t1.c
Lab08/Question1/: CMakeLists.txt
Lab08/Question1/src/: calc.c
Lab08/Question2/: CMakeLists.txt  output.txt
Lab08/Question2/src/: ciProlog.c  ciProlog.l  ciProlog.y
Labs/Lab01_02/: CMakeLists.txt
Labs/Lab03/: output.txt
Labs/Lab03/src/: list.c  main.c  person.c
Labs/Lab04/: CMakeLists.txt
Labs/Lab04/src/: main.c
Labs/Lab07/src/: flex_t1.h  flex_t1.l
Labs/Lab08/Question1/: output.txt
Labs/Lab08/Question1/src/: calc.h  calc.l  calc.y
Labs/Lab08/Question2/: output.txt
Labs/Lab08/Question2/src/: ciProlog.c  ciProlog.h  ciProlog.y
Parser/: sample_output.txt
Project/ciLispSrc/: ciLisp.c  ciLisp.h
c_tut/: CMakeLists.txt  CMakeSettings.json  C_Tutorial.md  KeepRunning.h
c_tut/src/: argc-argv.c  array-arg.c  array-ptr.c  array.c  calc.c  file.c  functions.c  hello.c  if-then-else.c  person.c  person.h  processor.c  processor.h  ptr-arg-2.c  ptr-arg-3.c  ptr-arg.c  ptr-func.c  ptr-problems.c  ref-arg.c  strings.c  struct.c  test_processor.c  types.c  words.c
lab4_scanner_1/: CMakeLists.txt
lab4_scanner_1/src/: main.c  scanner.h
linked_lists/: CMakeLists.txt
linked_lists/src/: list.c  list.h  main.c  person.c  person.h  person.test.c  personel.c  personel.h
parser/: CMakeLists.txt
parser/src/: parser.c  parser.h  scanner.c  scanner.h
scanner_1/: CMakeLists.txt
scanner_1/src/: main.c  scanner.c  scanner.h  scanner_ad_hoc.c
scanner_2/: CMakeLists.txt  state_table.txt
scanner_2/src/: main.c  scanner.c  scanner.h  table.c  table.h
